--- a/af/examples/disulfide_design.ipynb
+++ b/af/examples/disulfide_design.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sokrypton/ColabDesign/blob/v1.1.1/af/examples/disulfide_design.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -204,14 +204,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "af_model.design_3stage(50,50,10)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "wstI0n4zMydi"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "af_model.design_3stage(50,50,10)"
+      ]
     },
     {
       "cell_type": "code",
@@ -291,8 +291,7 @@
         "    if len([i for i in l]) == len(cys_pattern):\n",
         "        return stapled_pose\n",
         "    else:\n",
-        "        return 0\n",
-        "    "
+        "        return 0\n"
       ]
     },
     {
@@ -316,9 +315,9 @@
       "collapsed_sections": [
         "q4qiU9I0QHSz"
       ],
+      "include_colab_link": true,
       "name": "disulfide_design.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3.8.10 64-bit",
@@ -335,7 +334,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.10.13"
     },
     "vscode": {
       "interpreter": {
